# svix-cli

./: .gitignore  .goreleaser.yml  ChangeLog.md  Makefile  README.md  go.mod  go.sum  json.json  main.go  snapcraft.yaml
.github/workflows/: lint.yml  release.yml  typos.yml  validate.yml
cfg/: config.go
cmd/: application.go  authentication.go  completion.go  configure.go  docs.go  endpoint.go  event.go  export.go  filter.go  flags.go  import.go  init.go  integration.go  listen.go  login.go  message.go  messageattempt.go  open.go  root.go  validate.go  verify.go  version.go
config/: config.go
flags/: enum.go
inout/: eventtypes.go  file.go
pretty/: print.go  printer.go
relay/: messages.go  relay.go  token.go
svix-cli/: Cargo.toml
svix-cli2/: Cargo.toml
svix-cli2/src/: completion.rs  config.rs  main.rs  signature.rs
svix-cli2/src/cli_types/: application.rs  endpoint.rs  message_attempt.rs  mod.rs
svix-cli2/src/cmds/: completion.rs  listen.rs  mod.rs
svix-cli2/src/cmds/api/: application.rs  authentication.rs  endpoint.rs  event_type.rs  integration.rs  message_attempt.rs  mod.rs
svix-cli2/src/relay/: mod.rs
utils/: pipe.go  prompt.go
validators/: validators.go
version/: version.go
