[package]
name = "svix-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"
colored_json = "5.0.0"
concolor-clap = "0.1.0"
serde = "1.0.215"
svix = "1.43.0"
tokio = { version = "1.42.0", features = ["full"] }
